--- a/.env
+++ b/.env
@@ -1,14 +1,12 @@
+APP_ENV=dev
+APP_SECRET=a97872ed1ec0149757ea9ca327abc9cd
+
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
-POSTGRES_DBNAME=app
+POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres_pass
+# URL для подклюбчения к БД
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}?serverVersion=15&charset=utf8"
 
-NGINX_PORT=8088
-APP_ENV=dev
-APP_SECRET=9dca8a815dceeeca4c71860a9c700811
-DATABASE_URL="postgresql://postgres:postgres_pass@localhost:5432/app?serverVersion=15&charset=utf8"
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
-MAILER_DSN=null://null
-
-#EXTERNAL_URL=http://host.docker.internal:3002
