--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ POSTGRES_PASSWORD=postgres_pass
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres/${POSTGRES_DB}?serverVersion=15&charset=utf8"
 
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MAILER_DSN=null://null
