--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": ">=8.1",
+    "php": ">=8.2",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/dbal": "^3",
@@ -15,6 +15,7 @@
     "knplabs/knp-paginator-bundle": "^6.7",
     "phpdocumentor/reflection-docblock": "^5.6",
     "phpstan/phpdoc-parser": "^2.0",
+    "stof/doctrine-extensions-bundle": "^1.13",
     "symfony/asset": "6.4.*",
     "symfony/asset-mapper": "6.4.*",
     "symfony/console": "6.4.*",
@@ -27,6 +28,7 @@
     "symfony/http-client": "6.4.*",
     "symfony/intl": "6.4.*",
     "symfony/mailer": "6.4.*",
+    "symfony/messenger": "6.4.*",
     "symfony/mime": "6.4.*",
     "symfony/monolog-bundle": "^3.0",
     "symfony/notifier": "6.4.*",
